fixing "cellView has a lot of gap between the rows"

--- a/ANGULAR/src/app/features/private/components/storage/storage-content/storage-content.component.css
+++ b/ANGULAR/src/app/features/private/components/storage/storage-content/storage-content.component.css
@@ -27,7 +27,7 @@
   background-color: var(--BGcolor);
   transition: 1s;
   flex-wrap: wrap;
-
+  align-content: baseline;
 }
 
 
